--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,15 @@
 spring:
   application:
     name: better-reads-application
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: <clientID>
+            client-secret: <clientSecret>
 
 server:
   port: 8081
-  servlet:
-    context-path: /better-reads-app
+#  servlet:
+#    context-path: /better-reads-app
