--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8081
-#  servlet:
-#    context-path: /better-reads-app
+  servlet:
+    context-path: /better-reads-app
 
 spring:
   application:
@@ -39,7 +39,7 @@ app:
   search-base-url: https://openlibrary.org/search.json
 
   # To enable logging for the request & response of any internal api call(s) to this application
-  internal-logger-enable: true
+  internal-logger-enable: false
   # WebClient configurations
   web-client:
     # Http request connection timeout: default is 10000 (in milliseconds)
